Fixed welcome screens and search screen
Welcome screen introduces an optional tutorial. Search screen has a different design.
TODO: Create suggestion buttons.

--- a/app/src/main/res/layout/activity_language.xml
+++ b/app/src/main/res/layout/activity_language.xml
@@ -6,57 +6,65 @@
     android:layout_height="match_parent"
     android:background="@color/lighter_main_blue">
 
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="166dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spanishButton"
+        app:layout_constraintVertical_bias="0.843"
+        app:srcCompat="@drawable/page2" />
+
     <Button
         android:id="@+id/englishButton"
-        android:layout_width="338dp"
+        android:layout_width="330dp"
         android:layout_height="54dp"
-        android:layout_marginTop="550dp"
         android:layout_marginBottom="16dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/custom_button_shape"
         android:fontFamily="@font/comfortaa_bold"
         android:text="English only"
-        android:textAllCaps="false"
         android:textColor="@color/darker_main_blue"
         android:textSize="18sp"
         app:cornerRadius="20dp"
         app:layout_constraintBottom_toTopOf="@+id/frenchButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <Button
         android:id="@+id/frenchButton"
-        android:layout_width="338dp"
+        android:layout_width="330dp"
         android:layout_height="54dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/custom_button_shape"
         android:fontFamily="@font/comfortaa_bold"
         android:text="French"
-        android:textAllCaps="false"
         android:textColor="@color/darker_main_blue"
         android:textSize="18sp"
         app:cornerRadius="20dp"
         app:layout_constraintBottom_toTopOf="@+id/spanishButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/englishButton" />
 
     <Button
         android:id="@+id/spanishButton"
-        android:layout_width="338dp"
+        android:layout_width="330dp"
         android:layout_height="54dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="300dp"
-        android:background="#FFFFFF"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/custom_button_shape"
         android:fontFamily="@font/comfortaa_bold"
         android:text="Spanish"
-        android:textAllCaps="false"
         android:textColor="@color/darker_main_blue"
         android:textSize="18sp"
         app:cornerRadius="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/imageView7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,10 +72,10 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="366dp"
-        android:layout_height="56dp"
+        android:layout_width="369dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="37dp"
-        android:layout_marginBottom="13dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/comfortaa_bold"
         android:text="Choose additional languages"
         android:textAlignment="center"
@@ -80,14 +88,14 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="251dp"
-        android:layout_height="252dp"
+        android:layout_width="244dp"
+        android:layout_height="242dp"
         android:layout_marginStart="80dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="80dp"
-        android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toTopOf="@+id/englishButton"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
         app:srcCompat="@drawable/language_screen" />
