--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -4,74 +4,113 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lighter_main_blue">
+    android:background="@color/lighter_main_blue"
+    android:textAlignment="center">
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="298dp"
         android:layout_height="288dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginBottom="70dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.494"
+        app:layout_constraintVertical_bias="0.255"
         app:srcCompat="@drawable/welcome_screen_image" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="80dp"
         android:fontFamily="@font/comfortaa_bold"
         android:text="Welcome to NewsBear!"
         android:textColor="@color/darker_main_blue"
         android:textSize="28sp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.48"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:fontFamily="@font/comfortaa_bold"
-        android:text="Bringing reliable news to young adults"
+        android:layout_width="313dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/comfortaa"
+        android:text="Our app provides an easy way for young adults to fact check and find reliable news."
+        android:textAlignment="center"
         android:textColor="@color/darker_main_blue"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/continueButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/welcomeCardView"
-        android:layout_width="313dp"
-        android:layout_height="60dp"
+    <Button
+        android:id="@+id/continueButton"
+        android:layout_width="330dp"
+        android:layout_height="63dp"
         android:layout_marginStart="59dp"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="59dp"
-        app:cornerRadius="50dp"
+        android:background="@drawable/custom_button_shape"
+        android:fontFamily="@font/comfortaa_bold"
+        android:text="Continue"
+        android:textColor="@color/darker_main_blue"
+        android:textSize="18sp"
+        app:cornerRadius="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/skipButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.513"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="303dp"
+        android:layout_height="33dp"
+        android:fontFamily="@font/comfortaa_bold"
+        android:text="Fact check the news you read!"
+        android:textAlignment="center"
+        android:textColor="@color/darker_main_blue"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="166dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.624">
+        app:layout_constraintTop_toBottomOf="@+id/continueButton"
+        app:layout_constraintVertical_bias="0.888"
+        app:srcCompat="@drawable/page1" />
 
-        <Button
-            android:id="@+id/getStartedButton"
-            android:layout_width="313dp"
-            android:layout_height="60dp"
-            android:background="@color/darker_main_blue"
-            android:fontFamily="@font/comfortaa_bold"
-            android:text="Get started!"
-            android:textAllCaps="false"
-            android:textColor="@color/darker_main_blue"
-            android:textSize="20dp"
-            app:cornerRadius="30dp" />
-    </androidx.cardview.widget.CardView>
+    <Button
+        android:id="@+id/skipButton"
+        android:layout_width="212dp"
+        android:layout_height="36dp"
+        android:layout_marginBottom="100dp"
+        android:background="#00FFFFFF"
+        android:text="Skip the tutorial"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/continueButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
