--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="false_red">#D0312D</color>
     <color name="true_green">#74B72E</color>
     <color name="neutral_blue">#233F9C</color>
+    <color name="grey">#99979797</color>
 </resources>
