All result images can now load
Issue with only the first result not showing the article image has been fixed. Also a few changes to the welcome and search activities.

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -63,8 +63,8 @@
         android:id="@+id/cardView2"
         android:layout_width="360dp"
         android:layout_height="49dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="400dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="450dp"
         android:background="@drawable/card_view_edge"
         app:cardCornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -76,6 +76,7 @@
             android:id="@+id/search_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:iconifiedByDefault="false"
             android:queryHint="@string/search_hint"
             android:title="Search"
             app:actionViewClass="android.widget.SearchView"
@@ -85,20 +86,21 @@
 
     <ImageView
         android:id="@+id/imageView8"
-        android:layout_width="467dp"
-        android:layout_height="166dp"
-        android:layout_marginBottom="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/cardView2"
+        android:layout_width="381dp"
+        android:layout_height="92dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/questionTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/newbear_logo" />
 
     <TextView
         android:id="@+id/questionTextView"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/comfortaa_bold"
         android:text="Question"
