--- a/app/src/main/res/layout/custom_list_layout.xml
+++ b/app/src/main/res/layout/custom_list_layout.xml
@@ -6,26 +6,13 @@
     android:layout_height="wrap_content"
     app:layout_constrainedHeight="true">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="404dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginEnd="103dp"
-        android:layout_marginBottom="32dp"
-        app:layout_constraintBottom_toTopOf="@+id/claim_title"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.549"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/grey_line_png_6" />
-
     <TextView
         android:id="@+id/claim_description"
         android:layout_width="340dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="24dp"
         android:fontFamily="@font/comfortaa_bold"
         android:text="TextView"
         android:textColor="#272727"
@@ -42,6 +29,7 @@
         android:layout_height="19dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="30dp"
+        android:layout_marginBottom="24dp"
         android:fontFamily="@font/comfortaa_light"
         android:text="TextView"
         android:textColor="#2E2D2D"
@@ -94,6 +82,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="24dp"
         android:backgroundTint="#00FFFFFF"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -109,6 +98,7 @@
         android:layout_width="362dp"
         android:layout_height="300dp"
         android:layout_marginTop="32dp"
+        android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -201,7 +191,8 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/textual_rating"
         app:layout_constraintEnd_toStartOf="@+id/textual_rating"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textual_rating" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
