Implementing TextRazor API
In the middle of implementing the TextRazor Keyword Extractor API.

--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -29,7 +29,7 @@
         android:fontFamily="@font/comfortaa_bold"
         android:text="Welcome to NewsBear!"
         android:textColor="@color/darker_main_blue"
-        android:textSize="28sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.48"
@@ -40,13 +40,13 @@
     <TextView
         android:id="@+id/textView2"
         android:layout_width="313dp"
-        android:layout_height="56dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:fontFamily="@font/comfortaa"
         android:text="Our app provides an easy way for young adults to fact check and find reliable news."
         android:textAlignment="center"
         android:textColor="@color/darker_main_blue"
-        android:textSize="16sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/continueButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,12 +74,12 @@
     <TextView
         android:id="@+id/textView5"
         android:layout_width="303dp"
-        android:layout_height="33dp"
+        android:layout_height="wrap_content"
         android:fontFamily="@font/comfortaa_bold"
         android:text="Fact check the news you read!"
         android:textAlignment="center"
         android:textColor="@color/darker_main_blue"
-        android:textSize="18sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
