--- a/app/src/main/res/layout/activity_get_started.xml
+++ b/app/src/main/res/layout/activity_get_started.xml
@@ -31,7 +31,7 @@
         android:text="Our app provides a simple and easy way for young adults to search for reliable news."
         android:textAlignment="viewStart"
         android:textColor="@color/darker_main_blue"
-        android:textSize="16sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/getStartedButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
@@ -41,7 +41,7 @@
     <TextView
         android:id="@+id/featuresTextView2"
         android:layout_width="361dp"
-        android:layout_height="27dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="26dp"
         android:layout_marginEnd="26dp"
         android:layout_marginBottom="16dp"
@@ -49,7 +49,7 @@
         android:text="Search to find results that look like this!"
         android:textAlignment="center"
         android:textColor="@color/darker_main_blue"
-        android:textSize="16sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/imageView10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
