--- a/app/src/main/res/layout/custom_list_layout.xml
+++ b/app/src/main/res/layout/custom_list_layout.xml
@@ -25,10 +25,10 @@
 
     <TextView
         android:id="@+id/claim_date"
-        android:layout_width="270dp"
-        android:layout_height="19dp"
+        android:layout_width="340dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="30dp"
         android:layout_marginBottom="24dp"
         android:fontFamily="@font/comfortaa_light"
         android:text="TextView"
@@ -44,7 +44,7 @@
         android:id="@+id/textual_rating"
         android:layout_width="340dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
+        android:layout_marginStart="40dp"
         android:fontFamily="@font/comfortaa"
         android:text="TextView"
         android:textAlignment="viewStart"
@@ -60,14 +60,14 @@
         android:id="@+id/claim_title"
         android:layout_width="340dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
+        android:layout_marginStart="40dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="@font/comfortaa_bold"
         android:text="TextView"
         android:textAlignment="viewStart"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="#272727"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textual_rating"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,8 +77,8 @@
 
     <ImageButton
         android:id="@+id/share_button"
-        android:layout_width="67dp"
-        android:layout_height="53dp"
+        android:layout_width="63dp"
+        android:layout_height="51dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="8dp"
@@ -143,10 +143,10 @@
         android:layout_width="33dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="18dp"
-        android:layout_marginEnd="2dp"
+        android:layout_marginEnd="5dp"
         android:fontFamily="@font/noto_color_emoji_compat"
         android:text="txt"
-        android:textSize="24sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/claim_title"
         app:layout_constraintEnd_toStartOf="@+id/claim_title"
         app:layout_constraintStart_toStartOf="parent"
@@ -156,11 +156,11 @@
         android:id="@+id/descriptionEmoji"
         android:layout_width="33dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
-        android:layout_marginEnd="2dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginEnd="5dp"
         android:fontFamily="@font/noto_color_emoji_compat"
         android:text="txt"
-        android:textSize="24sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/claim_description"
         app:layout_constraintEnd_toStartOf="@+id/claim_description"
         app:layout_constraintHorizontal_bias="0.0"
@@ -171,11 +171,11 @@
         android:id="@+id/dateEmoji"
         android:layout_width="33dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="22dp"
-        android:layout_marginEnd="3dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginEnd="5dp"
         android:fontFamily="@font/noto_color_emoji_compat"
         android:text="txt"
-        android:textSize="24sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/claim_date"
         app:layout_constraintEnd_toStartOf="@+id/claim_date"
         app:layout_constraintStart_toStartOf="parent"
@@ -186,9 +186,10 @@
         android:layout_width="33dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="18dp"
+        android:layout_marginEnd="5dp"
         android:fontFamily="@font/noto_color_emoji_compat"
         android:text="txt"
-        android:textSize="24sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/textual_rating"
         app:layout_constraintEnd_toStartOf="@+id/textual_rating"
         app:layout_constraintStart_toStartOf="parent"
