--- a/app/src/main/res/layout/custom_trend_layout.xml
+++ b/app/src/main/res/layout/custom_trend_layout.xml
@@ -2,178 +2,39 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="392dp"
-        android:layout_height="33dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="156dp"
+        android:layout_height="152dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/trendName"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.272"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/grey_line_png_6" />
+        app:srcCompat="@drawable/top_pics_template" />
 
     <TextView
         android:id="@+id/title_text_view"
-        android:layout_width="225dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="55dp"
-        android:layout_marginEnd="7dp"
+        android:layout_width="118dp"
+        android:layout_height="72dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="58dp"
+        android:layout_marginEnd="19dp"
+        android:layout_marginBottom="22dp"
         android:fontFamily="@font/comfortaa_bold"
         android:text="TextView"
-        android:textColor="#272727"
+        android:textAlignment="center"
+        android:textColor="@color/darker_main_blue"
         android:textSize="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
-        app:layout_constraintTop_toBottomOf="@+id/trendName" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="130dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="265dp"
-        android:layout_marginBottom="32dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/trendName">
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:cardCornerRadius="500dp">
-
-            <ImageView
-                android:id="@+id/image_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:layout_editor_absoluteX="266dp"
-                tools:layout_editor_absoluteY="48dp"
-                tools:srcCompat="@tools:sample/avatars" />
-        </androidx.cardview.widget.CardView>
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/date_text_view"
-        android:layout_width="137dp"
-        android:layout_height="17dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="200dp"
-        android:layout_marginBottom="5dp"
-        android:fontFamily="@font/comfortaa_light"
-        android:text="TextView"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
-
-    <TextView
-        android:id="@+id/author_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="176dp"
-        android:fontFamily="@font/comfortaa"
-        android:text="TextView"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/title_text_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
-        app:layout_constraintTop_toBottomOf="@+id/trendName" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="253dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="113dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="24dp"
-        android:fontFamily="@font/comfortaa_bold"
-        android:text="Read the full article"
-        android:textAllCaps="false"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
-        app:layout_constraintTop_toBottomOf="@+id/trendName" />
-
-    <ImageButton
-        android:id="@+id/share_image_button"
-        android:layout_width="52dp"
-        android:layout_height="41dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:backgroundTint="#00FFFFFF"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toTopOf="@+id/title_text_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/author_text_view"
-        app:layout_constraintTop_toBottomOf="@+id/trendName"
-        app:srcCompat="@drawable/share_emoji" />
-
-    <TextView
-        android:id="@+id/compactAuthorEmoji"
-        android:layout_width="30dp"
-        android:layout_height="24dp"
-        android:layout_marginEnd="2dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="@+id/author_text_view"
-        app:layout_constraintEnd_toStartOf="@+id/author_text_view"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
-        app:layout_constraintTop_toTopOf="@+id/author_text_view" />
-
-    <TextView
-        android:id="@+id/compactTitleEmoji"
-        android:layout_width="30dp"
-        android:layout_height="24dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginBottom="26dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="@+id/title_text_view"
-        app:layout_constraintEnd_toStartOf="@+id/title_text_view"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
-        app:layout_constraintTop_toTopOf="@+id/title_text_view" />
-
-    <TextView
-        android:id="@+id/compactDateEmoji"
-        android:layout_width="30dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/date_text_view"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
-
-    <TextView
-        android:id="@+id/trendName"
-        android:layout_width="305dp"
-        android:layout_height="21dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="90dp"
-        android:layout_marginBottom="17dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintStart_toStartOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="@+id/imageView6" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
