--- a/app/src/main/res/layout/list_of_claims.xml
+++ b/app/src/main/res/layout/list_of_claims.xml
@@ -14,8 +14,10 @@
         android:layout_marginTop="147dp"
         android:layout_marginEnd="176dp"
         android:layout_marginBottom="8dp"
+        android:fontFamily="@font/comfortaa"
         android:text="TextView"
         android:textAlignment="center"
+        android:textSize="16sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/claims_recycler_view"
         app:layout_constraintEnd_toEndOf="parent"
