--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="313dp"
+        android:layout_width="354dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="24dp"
@@ -20,7 +20,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
-        tools:text="Configure additional languages and number of article results" />
+        tools:text="Configure languages and number of article results" />
 
     <TextView
         android:id="@+id/textView4"
