--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -61,14 +61,14 @@
         android:id="@+id/settingButton"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginStart="370dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="100dp"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/cardView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView10"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/gear_icon" />
 
