--- a/app/src/main/res/layout/custom_list_layout.xml
+++ b/app/src/main/res/layout/custom_list_layout.xml
@@ -26,10 +26,11 @@
 
     <TextView
         android:id="@+id/claim_date"
-        android:layout_width="340dp"
+        android:layout_width="299dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
         android:layout_marginBottom="24dp"
         android:fontFamily="@font/comfortaa_light"
         android:text="TextView"
@@ -83,6 +84,7 @@
         android:layout_height="51dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginStart="12dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="24dp"
         android:backgroundTint="#00FFFFFF"
